# gh-notifs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gh_notifs.py  setup.cfg
.github/workflows/: automerge.yml
