[metadata]
name = gh-notifs
version = 0.1.0

[options]
py_modules = gh_notifs
python_requires = >=3.7
install_requires =
    humanize
    urllib3

[options.entry_points]
console_scripts =
    gh-notifs = gh_notifs:main

[isort]
profile = black
force_single_line = true

[flake8]
exclude =
    .venv
extend-ignore = E203, W503
max-complexity = 10
max-line-length = 88

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
